build 514 '.valueOf' calls from Java 1.5 replaced by Java 1.4 constructor calls