@@ -279,7 +279,7 @@ public class FolderFilter extends AbstractRecordFilter implements RecordFilter {
 //            parentId = FolderRecord.CATEGORY_MAIL_ID;
 //          }
 //          if (parentId != 0) {
-//            viewParentOk = keepViewParentIDsHT.get(Long.valueOf(parentId)) != null;
+//            viewParentOk = keepViewParentIDsHT.get(new Long(parentId)) != null;
 //          }
 //        }
 //      }
