@@ -229,7 +229,7 @@ public abstract class JActionFrameClosable extends JActionFrame implements Actio
   private class CloseAction extends AbstractActionTraced {
     public CloseAction(int actionId) {
       super(com.CH_gui.lang.Lang.rb.getString("action_Close"), Images.get(ImageNums.DELETE16));
-      putValue(Actions.ACTION_ID, Integer.valueOf(actionId));
+      putValue(Actions.ACTION_ID, new Integer(actionId));
       putValue(Actions.TOOL_TIP, com.CH_gui.lang.Lang.rb.getString("actionTip_Close_the_Frame."));
       putValue(Actions.TOOL_ICON, Images.get(ImageNums.DELETE24));
       putValue(Actions.TOOL_NAME, com.CH_gui.lang.Lang.rb.getString("actionTool_Close"));
