@@ -63,15 +63,15 @@ public class ShareTableModel extends RecordTableModel {
           { STR_NAME, STR_WRITE, STR_DELETE },
           { null, null, null },
           { null, null, null },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(  0), Integer.valueOf( 0), Integer.valueOf( 0) },
-          { Integer.valueOf( 90), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0) }
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(  0), new Integer( 0), new Integer( 0) },
+          { new Integer( 90), new Integer(55), new Integer(55) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0) }
         }),
       // Groups
       new ColumnHeaderData(new Object[][] 
@@ -79,15 +79,15 @@ public class ShareTableModel extends RecordTableModel {
           { STR_NAME, STR_ADD, STR_REMOVE },
           { null, null, null },
           { null, null, null },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(120), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(  0), Integer.valueOf( 0), Integer.valueOf( 0) },
-          { Integer.valueOf( 90), Integer.valueOf(55), Integer.valueOf(55) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) },
-          { Integer.valueOf(0) }
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(120), new Integer(55), new Integer(55) },
+          { new Integer(  0), new Integer( 0), new Integer( 0) },
+          { new Integer( 90), new Integer(55), new Integer(55) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0), new Integer(1), new Integer(2) },
+          { new Integer(0) }
         })
   };
 
@@ -215,7 +215,7 @@ public class ShareTableModel extends RecordTableModel {
     if (column > 0 && aValue instanceof Boolean) {
       FolderShareRecord shareRecord = (FolderShareRecord) getRowObject(row);
       Boolean b = (Boolean) aValue;
-      Short newShort = b.booleanValue() ? Short.valueOf(FolderShareRecord.YES) : Short.valueOf(FolderShareRecord.NO);
+      Short newShort = b.booleanValue() ? new Short(FolderShareRecord.YES) : new Short(FolderShareRecord.NO);
       if (column == 1)
         shareRecord.canWrite = newShort;
       else if (column == 2)
